# Scaling

./: .env.example  CLEANUP_GUIDE.md  README.md  pyproject.toml  requirements.txt  test_dataset_access.py
Documents/Text Scaling/: .gitignore  CLAUDE.md  PROJECT_SUMMARY.md  cf_score_validation_20250618_152651.csv  create_visualizations.py  dimension_weights_full_20250618_151143.csv  ideology_pipeline_complete.py  multidimensional_scores_full_20250618_151143.csv  overall_ideology_scores_full_20250618_151143.csv  pipeline_test.py  policy_summaries_full_20250618_151143.csv  test_weekly_pipeline.py  two_week_comparison_full_20250618_151143.csv  validate_with_cf_scores.py  week_to_week_changes_full_20250618_151143.csv  weekly_multidimensional_pipeline.py
config/: dataset_config.yaml
data_processing/: create_data_card.py  create_hf_viewer.py  dataset_config.yaml  dime_data_documentation.py  dime_dataloader.py  dime_processing_pipeline.py  test_dataset_access.py  text_scaling_dataloader.py  text_scaling_processing_pipeline.py  upload_dime_recipients.py  upload_text_scaling_dataset.py
dime_filtered/: dime_senate_candidates.parquet
docs/: DATASET_PROCESSING.md  README.md  README_DIME.md  README_FINAL.md  dime_schema.json  dime_statistics.json
notebooks/: langsmith_usage.ipynb
scripts/: test_access.py  upload_dataset.py
src/scaling/: data_utils.py  dataset.py  processors.py
src/scaling/utils/: README.md  config.py  logging.py
tests/: test_config.py  test_logging.py  test_logging_example.py
