[project]
name = "scaling"
version = "0.1"
description = "A data science project for scaling with LLM in political science"
authors = [
  { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[tool.hatch.metadata.hooks.requirements_txt]
files = ["requirements.txt"]

[tool.hatch.version]
path = "src/scaling/__init__.py"  # optional: version is stored here

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "black",
  "mypy",
  "ruff",
  "coverage",
]

[tool.hatch.envs.default.scripts]
lint = "ruff src tests"
format = "black src tests"
typecheck = "mypy src"
test = "pytest"
coverage-report = "coverage run -m pytest && coverage report"

[tool.black]
line-length = 88
target-version = ["py312", "py311", "py310"]